Picture align fix

--- a/Yad2Proj/wwwroot/css/site.css
+++ b/Yad2Proj/wwwroot/css/site.css
@@ -96,7 +96,7 @@ body {
 .productTile {
     flex-wrap: wrap;
     width: 200px;
-    border: 3px solid black;
+    border: 1px solid black;
     margin: 20px;
 }
 
